# dht_lcd-pico

./: .gitignore  CMakeLists.txt  README.md  dht_lcd.c  pico_sdk_import.cmake
src/: dht_lcd.c  dht_lcd.h  main.c  main.h
src/lib/: lcd_16x2.h
src/lib/dht/: dht.c  dht.h
src/lib/lcd/: lcd_16x2.c
